<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/labelStyle"
        android:id="@+id/label_bill"
        android:text="@string/label_bill"
        android:minWidth="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        style="@style/inputStyle"
        android:id="@+id/amount_bill"
        android:layout_toRightOf="@id/label_bill"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/label_bill"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        android:layout_marginRight="20dp"
        />

    <TextView
        style="@style/labelStyle"
        android:id="@+id/label_tip_percent"
        android:layout_below="@id/label_bill"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/label_bill"
        android:text="@string/label_tip_percent"
        android:layout_marginTop="20dp"
        />

    <EditText
        style="@style/inputStyle"
        android:id="@+id/amount_tip_percent"
        android:layout_toRightOf="@id/label_tip_percent"
        android:layout_alignBottom="@id/label_tip_percent"
        android:layout_alignRight="@id/amount_bill"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number"
        />
    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#FF00"
        android:layout_below="@id/label_tip_percent"
        android:layout_alignLeft="@id/label_tip_percent"
        android:layout_alignRight="@id/amount_tip_percent"
        android:layout_marginTop="20dp"
        />
    <TextView
        style="@style/labelStyle"
        android:id="@+id/label_tip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/red_line"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/label_bill"
        android:text="@string/label_tip"
        />
    <TextView
        style="@style/OutputStyle"
        android:id="@+id/amount_tip"
        android:layout_toRightOf="@id/label_tip"
        android:layout_alignBottom="@id/label_tip"
        android:layout_alignRight="@id/amount_bill"
        />
    <TextView
        style="@style/labelStyle"
        android:id="@+id/label_total"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_tip"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/label_bill"
        android:text="@string/label_total"
        />
    <TextView
        style="@style/OutputStyle"
        android:id="@+id/amount_total"
        android:layout_toRightOf="@id/label_total"
        android:layout_alignBottom="@id/label_total"
        android:layout_alignRight="@id/amount_bill"
        />

    <!--
    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_total"
        android:text="CALCULATE"
        android:layout_centerHorizontal="true"
        android:onClick="calculate"
        />
        /-->

</RelativeLayout>